Teste de imagem

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 <main id="main">
-
+    <img src="assets/img/placeholder.jpeg" alt="teste de imagem" />
 </main>
 <!-- End #main -->
 {% endblock %}
